Fix text size issue on mobile device

--- a/resources/css/smallscreen.css
+++ b/resources/css/smallscreen.css
@@ -39,7 +39,7 @@ p {
     
 }
 header{
-    background: linear-gradient(283deg, #00198f, #911f00);
+    background: #004571;
     background-size: 200% 200%;
     max-width:100%;
     max-height: auto;
@@ -52,9 +52,9 @@ header{
   }
 
   @keyframes backheader {
-    0%{background-position:0% 52%}
-    50%{background-position:100% 49%}
-    100%{background-position:0% 52%}
+    0%{background-position:49% 0%}
+    50%{background-position:52% 100%}
+    100%{background-position:49% 0%}
   }
 
   .banner {
@@ -88,7 +88,7 @@ header{
 
 nav {
     width: 100%;
-    background: linear-gradient(283deg, #00198f, #911f00);
+    background: #004571;
     height: auto;
     display: flex;
     align-items: center;
@@ -197,6 +197,7 @@ nav {
     color:#0b1b2a;
     margin-bottom: 0;
     letter-spacing: 0.05em;
+    font-size: 2em;
     
 }
 .summary p {
@@ -232,8 +233,11 @@ hr {
     justify-content: space-around; 
 }
 
-.information h2{
+.information h2 {
     margin: 2em 0em 0em 0em;
+    letter-spacing: 0.05em;
+    font-size: 2em;
+    color:#0b1b2a;
 }
 .david img{
     max-width:100%;
@@ -246,9 +250,10 @@ hr {
     display: block;
     justify-content: space-between;   
 }
-.skill h2 {
+.skills h2 {
     margin-bottom: 1em;
     margin-top: 0;
+    
 }
 .skills img {
     width: 10%;
@@ -260,4 +265,54 @@ hr {
 }
 .work h2{
     margin: 2em 0em 0em 0em;
+    letter-spacing: 0.05em;
+    font-size: 2em;
+    color:#0b1b2a;
 }
+
+.row {
+    margin: 8px -16px;
+  }
+  
+  /* Add padding BETWEEN each column (if you want) */
+  .row,
+  .row > .column {
+    padding: 8px;
+  }
+  
+  /* Create four equal columns that floats next to each other */
+  .column {
+    float: left;
+    width: 25%;
+  }
+  
+  /* Clear floats after rows */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Content */
+  .content {
+    background-color: white;
+    padding: 10px;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 900px) {
+    .column {
+      width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
+  .row img {
+      max-width:0%;
+      max-height: auto;
+  }
